# PedalSuite

./: .gitignore  .gitmodules  CMakeLists.txt  build_and_install.sh  install.sh
.github/workflows/: build.yml
Electrica/: CMakeLists.txt
Electrica/source/: DebugOverlay.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Electrica/source/DSP/: ElectricaDSP.h
Electrica/source/DSP/Core/: CycfiQPitchDetector.h  ElectricaDSPProcessor.h  FFTPeakDetector.h  GeneratedDictionaries.h  MPMPitchDetector.h  NoteTracker.h  OnsetDetector.h  PolyBLEPOscillator.h  PolyphonicTracker.h  SparsePitchDetector.h  SpectralFluxDetector.h  SynthEnvelope.h  SynthVoice.h  YINPitchDetector.h
Hydraulica/: CMakeLists.txt
Hydraulica/source/: DebugOverlay.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Hydraulica/source/DSP/: HydraulicaDSP.h
Hydraulica/source/DSP/Core/: DoomNormalizer.h  EnvelopeFollower.h  GainComputer.h  HydraulicaDSPProcessor.h
Hydraulica/source/DSP/Utils/: DSPUtils.h
Hydraulica/source/Service/: PresetManager.cpp  PresetManager.h
Mechanica/: CMakeLists.txt
Mechanica/source/: DebugOverlay.h  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
Mechanica/source/DSP/: MechanicaDSP.h
Mechanica/source/DSP/Core/: FeedbackProcessor.h  MechanicaDSPProcessor.h  NoiseGate.h  ThreeBandEQ.h  WaveshaperBank.h
Mechanica/source/DSP/Utils/: ParameterSmoother.h
Pneumatica/: CMakeLists.txt
Pneumatica/source/: DebugOverlay.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Pneumatica/source/DSP/: PneumaticaDSP.h
Pneumatica/source/DSP/Core/: CrossoverFilter.h  NoiseGenerator.h  PneumaticaDSPProcessor.h  Saturator.h  ShimmerProcessor.h  StereoWidener.h
cmake-local/: MoonbaseStubs.h  PedalMoonbase.cmake
docs/: feature-ideas.md  plugin-parameters.md
packaging/: LICENSE.txt  installer.nsi
tools/dict_pipeline/: build_dictionaries.py  fetch_datasets.sh  output.txt  requirements.txt
